Update Maven build files
- JUnit 5.3.0-M1
- SLF4J 1.8.0-beta2
- maven-compiler-plugin 3.7.1-SNAPSHOT
- maven-surefire-plugin 2.22.0